--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             I am currently a final-year PhD student at <strong>The Hong Kong University of Science and Technology (HKUST)</strong>, 
             working under the supervision of <a href="https://xmengli.github.io/">Prof. Xiaomeng Li</a>. 
             Additionally, I work closely with <a href="https://lijie-hu.github.io/">Prof. Lijie Hu</a> at <strong>MBZUAI</strong> 
-            and <a href="https://scholar.google.com/citations?user=ylZQz2sAAAAJ&hl=en">Prof. Sichao Li</a> (Incoming Lecturer at <strong>The University of Sydney</strong>).
+            and <a href="https://scholar.google.com/citations?user=ylZQz2sAAAAJ&hl=en">Prof. Sichao Li</a> (Incoming Lecturer at <strong>USYD</strong>).
           </p>
           <p>
             Prior to my PhD, I earned my Bachelor's degree (with Honours) from <strong>The Australian National University</strong>, 
