--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Xinyue XU</title>
+  <title>Xinyue (Thea) XU</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="author" content="Xinyue XU">
+  <meta name="author" content="Xinyue (Thea) XU">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="images/dog.ico">
   
