--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             <img src="images/grl.png" alt="GRL">
           </div>
           <div class="pub-content">
-            <h3 class="pub-title">Machine Learning Models for Evaluating Biological Reactivity within Molecular Fingerprints of Dissolved Organic Matter over time</h3>
+            <h3 class="pub-title">Machine Learning Models for Evaluating Biological Reactivity within Molecular Fingerprints of Dissolved Organic Matter Over Time</h3>
             <div class="pub-authors">
               Chen Zhao, Kai Wang, Qianji Jiao, <strong>Xinyue Xu</strong>, Yuanbi Yi, Penghui Li, Julian Merder, Ding He
             </div>
@@ -215,6 +215,7 @@
               We utilize machine learning to correlate molecular composition with biological reactivity in reservoirs, leveraging model tuning to enhance both predictive power and interpretability.
             </p>
             <div class="pub-links">
+              <a href="https://agupubs.onlinelibrary.wiley.com/doi/full/10.1029/2024GL108794" class="tag-btn">📄 Paper</a>
               <span class="tag-category">AI4Science</span>
             </div>
           </div>
@@ -362,7 +363,8 @@
         <h2>Memberships & Services</h2>
         <ul class="dense-list">
           <li>
-            <strong>Reviewer:</strong> ICLR 2025-2026, CVPR 2026, T-PAMI
+            <strong>Reviewer:</strong> ICLR 2025-2026, CVPR 2026, ECCV 2026, <br>
+             T-PAMI
           </li>
           <li>
             <strong>Program Committee Member:</strong> ICONIP 2023 - 2025
@@ -380,7 +382,7 @@
             <strong>Teaching Assistant:</strong> ELEC 1200 A System View of Communications: from Signals to Packets (HKUST, Spring & Fall 2023)
           </li>
           <li>
-            <strong>Teaching Assistant:</strong> Statistics of Stochastic Process & Algorithms (SJTU Summer School, 2021)
+            <strong>Teaching Assistant:</strong> Statistics of Stochastic Process & Algorithms and Analysis (SJTU Summer School, 2021)
           </li>
         </ul>
       </div>
