--- a/index.html
+++ b/index.html
@@ -117,6 +117,27 @@
       
       <div class="pub-list">
 
+        <div class="pub-card" data-topic="llm sci">
+          <div class="pub-img">
+            <img src="images/atttok.png" alt="ATTTOK">
+          </div>
+          <div class="pub-content">
+            <h3 class="pub-title">AttTok: Marrying Attribute Tokens with Generative Pre-trained Vision-Language Models towards Medical Image Understanding</h3>
+            <div class="pub-authors">
+              Hualiang Wang, <strong>Xinyue Xu</strong>, Lehan Wang, Bin Pu, Xiaomeng Li
+            </div>
+            <div class="pub-venue"><em>ICLR, 2026</em></div>
+            <p class="pub-desc">
+              We introduce <strong>AttTok</strong>, a novel framework that employs special attribute tokens and attribute-centric mechanisms to align visual and textual modalities, significantly enhancing discriminative accuracy and medical reasoning.
+            </p>
+            <div class="pub-links">
+              <a href="https://openreview.net/forum?id=UjSoF5CM09" class="tag-btn">📄 Paper</a>
+              <span class="tag-category">LLM</span>
+              <span class="tag-category">AI4Science</span>
+            </div>
+          </div>
+        </div>
+
         <div class="pub-card" data-topic="llm iml">
           <div class="pub-img">
             <img src="images/stads.png" alt="STADS">
@@ -242,7 +263,7 @@
           </div>
         </div>
 
-        <div class="pub-card" data-topic="sci">
+        <div class="pub-card" data-topic="iml sci">
           <div class="pub-img">
             <img src="images/est.png" alt="EST">
           </div>
@@ -261,6 +282,7 @@
             </p>
             <div class="pub-links">
               <a href="https://pubs.acs.org/doi/pdf/10.1021/acs.est.3c00199" class="tag-btn">📄 Paper</a>
+              <span class="tag-category">Interpretability</span>
               <span class="tag-category">AI4Science</span>
             </div>
           </div>
@@ -363,8 +385,12 @@
         <h2>Memberships & Services</h2>
         <ul class="dense-list">
           <li>
-            <strong>Reviewer:</strong> ICLR 2025-2026, CVPR 2026, ECCV 2026, <br>
-             T-PAMI
+            <strong>Reviewer:</strong> 
+            ICLR 2025-2026, 
+            CVPR 2026, 
+            ICML 2026, <br>
+            ECCV 2026, 
+            T-PAMI
           </li>
           <li>
             <strong>Program Committee Member:</strong> ICONIP 2023 - 2025
