--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <button class="filter-btn" onclick="filterPubs('iml', event)">Interpretable ML</button>
         <button class="filter-btn" onclick="filterPubs('llm', event)">Large Language Models</button>
         <button class="filter-btn" onclick="filterPubs('sci', event)">AI4Science</button>
-        <button class="filter-btn" onclick="filterPubs('other', event)">Other</button>
+        <!-- <button class="filter-btn" onclick="filterPubs('other', event)">Other</button> -->
       </div>
       
       <div class="pub-list">
